# DML

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  third-party-programs.txt
examples/: CMakeLists.txt  multisocket.c  multisocket.cpp  perftest.c
examples/dml_job_api/: CMakeLists.txt  dml_examples.h  job_wrapper_examples.c  job_wrapper_launchers.c  main.c
examples/high-level-api/: CMakeLists.txt  batch_example.cpp  cache_flush_example.cpp  compare_example.cpp  compare_pattern_example.cpp  copy_crc_example.cpp  crc_example.cpp  delta_example.cpp  dualcast_example.cpp  fill_example.cpp  mem_move_example.cpp
examples/high_level_api/: CMakeLists.txt  cache_flush.cpp  compare.cpp  compare_pattern.cpp  copy_crc.cpp  crc.cpp  delta.cpp  dualcast.cpp  fill.cpp  mem_move.cpp
examples/low-level-api/: CMakeLists.txt  batch_example.c  cache_flush_example.c  compare_example.c  compare_pattern_example.c  copy_crc_example.c  crc_example.c  delta_example.c  dif_example.c  dualcast_example.c  examples_utils.h  fill_example.c  move_example.c  multi_socket_example.c
examples/low-level-api/samples/: CMakeLists.txt  job_wrapper_examples.c
high-level-api/: CMakeLists.txt
high-level-api/include/dml/: data_view.hpp  dml.hpp  execute.hpp  execution_interface.hpp  execution_path.hpp  handler.hpp  operations.hpp  sequence.hpp  submit.hpp
middle-layer/: CMakeLists.txt
middle-layer/common/: CMakeLists.txt
middle-layer/dispatcher/: hw_device.cpp  hw_device.hpp  hw_dispatcher.cpp  hw_dispatcher.hpp  hw_queue.hpp  numa.cpp
middle-layer/include/dml_ml/: apply_delta.hpp  awaiter.hpp  batch.hpp  cache_flush.hpp  compare.hpp  compare_pattern.hpp  copy_crc.hpp  crc.hpp  create_delta.hpp  dualcast.hpp  fill.hpp  hardware_path.hpp  mem_copy.hpp  mem_move.hpp  operation.hpp  result.hpp  software_path.hpp
middle-layer/source/: apply_delta.cpp  awaiter.cpp  batch.cpp  cache_flush.cpp  compare.cpp  compare_pattern.cpp  copy_crc.cpp  crc.cpp  create_delta.cpp  dualcast.cpp  fill.cpp  hardware_path.cpp  mem_copy.cpp  mem_move.cpp  operation.cpp
middle-layer/source/own/: definitions.hpp  types.hpp
sources/: CMakeLists.txt  dml_batch.c  dml_check_job.c  dml_execute_job.c  dml_finalize_job.c  dml_get_library_version.c  dml_submit_job.c  dml_wait_job.c
sources/c_api/: CMakeLists.txt  dml.cpp  dml_batch.c  dml_batch.cpp  dml_check_job.c  dml_execute_job.c  dml_get_job_size.c  dml_get_library_version.c  dml_get_library_version.cpp  dml_hw_get_operation_result.cxx  dml_hw_init_descriptor.cxx  dml_init_job.c
sources/c_api/include/: impl.hpp  job_view.hpp  macros.hpp  make_task.hpp  own_dml_api.h  own_dml_batch.h  own_dml_checkers.h  own_dml_definitions.h  range_check.hpp  state.hpp  status.hpp  utils.hpp  write_descriptor.hpp  write_result.hpp
sources/c_api/sw-path/: own_submit_software_apply_delta.cxx  own_submit_software_batch.cxx  own_submit_software_copy_with_crc.cxx  own_submit_software_fill.cxx  own_submit_software_insert_dif.c
sources/core/: CMakeLists.txt
sources/core/src/: apply_delta.cpp  batch.cpp  cache_flush.cpp  compare.cpp  compare_pattern.cpp  copy_crc.cpp  crc.cpp  create_delta.cpp  dif_check.cpp  dif_insert.cpp  dif_strip.cpp  dif_update.cpp  drain.cpp  dualcast.cpp  fill.cpp  hardware_device.cpp  kernels.hpp  mem_move.cpp  nop.cpp  software_device.cpp  utils.hpp  validation.cpp
sources/cores/: CMakeLists.txt
sources/cores/include/: core_api.h  core_compare.h  core_cpu_features.h  core_definitions.h  core_hash_functions.h  (+1 more)
sources/cpp_api/: CMakeLists.txt
sources/hw-path/: CMakeLists.txt
sources/include/: own_dml_align.h  own_dml_batch.h  own_dml_checkers.h  own_dml_definitions.h  own_dml_internal_state.h
sources/middle_layer/: CMakeLists.txt  awaiter.cpp  core.cpp  device.cpp  utils.hpp  validation.cpp
sources/sw-path/: CMakeLists.txt  own_software_check_result.cxx  own_software_data_tables.c  own_software_get_state_size.c  own_software_reverse_functions.cxx  own_submit_software_cache_flush.cxx  own_submit_software_check_dif.c  own_submit_software_compare.cxx  own_submit_software_compare_pattern.cxx  own_submit_software_crc.cxx  own_submit_software_create_delta.cxx  own_submit_software_dualcast_copy.cxx  own_submit_software_mem_move.cxx  own_submit_software_path.c  own_submit_software_strip_dif.c  own_submit_software_update_dif.c
tests/: CMakeLists.txt  README.md
tests/common/: t_align_allocator.cxx  t_align_allocator.hpp  t_command_line_parser.hpp  t_common.hpp  t_job.cpp  t_job.hpp  t_literals.hpp  t_memory_pool.cxx  t_random_generator.cxx  t_random_parameters.hpp  t_range.hpp  t_templates.hpp  t_utility_functions.cpp  t_utility_functions.hpp
tests/core_tests/: ta_apply_delta_record_8u.cpp  ta_cache_features.cpp  ta_compare_8u.cpp  ta_create_delta_record_8u.cpp  ta_fill_with_pattern_8u.cpp  ta_move_8u.cpp
tests/functional/: CMakeLists.txt  batch.cpp  cache_flush.cpp  copy_crc.cpp  crc.cpp  dif_check.cpp  dif_insert.cpp  dif_strip.cpp  dif_update.cpp  fill.cpp  mem_move.cpp
tests/high-level-api/: CMakeLists.txt
tests/job_api_tests/: ta_apply_delta.cpp  ta_batch.cpp  ta_cache_flush.cpp  ta_check_dif.cpp  ta_compare.cpp  ta_copy_with_crc.cpp  ta_crc.cpp  ta_create_delta.cpp  ta_drain.cpp  ta_fill.cpp  ta_insert_dif.cpp  ta_mem_move.cpp  ta_strip_dif.cpp  tb_apply_delta.cpp  tb_cache_flush.cpp  tb_compare.cpp  tb_copy_with_crc.cpp  tb_create_delta.cpp  tb_mem_move.cpp  tb_strip_dif.cpp  tb_update_dif.cpp
tests/test_utils/: CMakeLists.txt
tests/utils/: CMakeLists.txt
tools/: CMakeLists.txt
tools/benchmarks/: CMakeLists.txt
tools/configs/: 1n1d1e1w-s-n1.conf  1n1d1e1w-s-n2.conf  1n1d4e1w-s-n1.conf  1n1d4e1w-s-n2.conf  1n2d4e1w-s-n1.conf  1n2d4e1w-s-n2.conf  1n3d4e1w-s-n1.conf  1n3d4e1w-s-n2.conf  1n4d1e1w-s-n1.conf  1n4d1e1w-s-n2.conf  1n4d4e1w-s-n1.conf  1n4d4e1w-s-n2.conf  2n1d1e1w-s.conf  2n1d4e1w-s.conf  2n2d4e1w-s.conf  2n3d4e1w-s.conf  2n4d4e1w-s.conf
tools/scripts/: accel_conf.py  accel_conf.sh
(+514 files in other folders)
